# InvariantForecasting

./: .gitignore  LICENSE  README.md  firstrundocumentation.aux  firstrundocumentation.fdb_latexmk  firstrundocumentation.tex  pyproject.toml
configs/training/: grpo_forecastbench.yaml  grpo_forecastbench_lambda0.yaml  grpo_forecastbench_lambda1.yaml  grpo_forecastbench_mantic_lambda0.yaml  grpo_forecastbench_mantic_lambda1.yaml  tinker_grpo_lambda0.yaml  tinker_grpo_lambda0_full.yaml  tinker_grpo_lambda1.yaml
data/paraphrased/: forecastbench_current_after_2025-08-31_5x.jsonl
data/processed/: forecastbench_current_after_2025-08-31.csv  forecastbench_current_after_2025-08-31_5x_paraphrases.csv
data/raw/: forecastbench_current_after_2025-08-31.jsonl
firstrunraw/: lambda0_group_metrics.csv  lambda0_summary.json  lambda0_variant_predictions.csv  lambda1_group_metrics.csv  lambda1_summary.json  lambda1_variant_predictions.csv
human/: questions_and_paraphrases.txt
reference/: briefing.html
reports/: todays_findings_2026-04-30.aux  todays_findings_2026-04-30.out  todays_findings_2026-04-30.tex
scripts/: audit_forecastbench.py  drop_templated_outputs.py  estimate_progress.py  fetch_forecastbench_current.py  make_forecastbench_paraphrases.py
tests/: test_build_training_set.py  test_context.py  test_data.py  test_eval_baseline.py  test_eval_coherence.py  test_forecastbench.py  test_llm_client.py  test_manifold.py  test_metaculus.py  test_paraphrase_llm.py  test_polymarket.py  test_reward.py  test_training_rewards.py  test_training_safety.py  test_unify.py
updates/: firstrundocumentation.fls
(+69 files in other folders)
