[project]
name = "invariantforecasting"
version = "0.1.0"
description = "Frame-invariant RL post-training for LLM forecasting"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=1.13.0",
  "datasets>=4.0.0",
  "numpy>=2.0.0",
  "peft>=0.19.0",
  "pyyaml",
  "torch>=2.8.0",
  "transformers>=5.7.0",
  "trl>=1.3.0",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
