[project]
name = "invariantforecasting"
version = "0.2.0"
description = "Frame-invariant RL post-training for LLM forecasting (gpt-oss-120b on Tinker)"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "anthropic>=0.40.0",
  "openai>=1.50.0",
  "requests>=2.31.0",
  "pyyaml>=6.0",
  "numpy>=1.26.0",
  "tqdm>=4.66.0",
  "jinja2>=3.1.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]
tinker = ["tinker"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
